adjust margins and justify text

--- a/_includes/what_we_do.html
+++ b/_includes/what_we_do.html
@@ -1,7 +1,7 @@
     <section id="what-we-do" class="{% cycle '', 'bg-light-gray' %}">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-justify">
                     <h2 class="section-heading">What we do</h2>
                     <h3 class="section-subheading text-muted">
                         Stockholm AI was established to act as a platform for exchanging knowledge between experts in different fields relating to AI, and we encourage our members to take initiative and arrange events. Don’t hesitate to get in touch with us if you wish to contribute or give us feedback.
@@ -16,7 +16,7 @@
                 </div>
             </div>
 
-            <div class="row text-center">
+            <div class="row text-justify">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
