--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
     <section class="{% cycle '', 'bg-light-gray' %}" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-justify">
                     <h2 class="section-heading">About</h2>
                     <h3 class="section-subheading text-muted">
                         {{ site.data.organization.name }} is an independent non-profit organisation serving as an open forum to bring industry professionals and researchers in the Stockholm area together to discuss recent and future developments.
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-justify">
                     <ul class="timeline">
                         {% for event in site.data.timeline %}
                             <li class="{% cycle '', 'timeline-inverted' %}">
