--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -397,15 +397,17 @@ section h2.section-heading {
     margin-top: 0;
     margin-bottom: 50px;
     font-size: 40px;
+    text-align: center;
 }
 
 section h3.section-subheading {
-    margin-bottom: 75px;
+    margin-bottom: 40px;
     text-transform: none;
     font-family: {{ site.data.template.font.secondary }};
     font-size: 16px;
-    font-style: italic;
+    font-style: normal;
     font-weight: 400;
+    line-height: 1.7em;
 }
 
 @media(min-width:768px) {
